@startuml
'https://plantuml.com/class-diagram



class CreateParameterCategoryUI{}

class CreateParameterCategoryController{
createParameterCategory(code, description, nhsId)
saveParameterCategory()
}

class Company{
store = getParameterCategoryStore()
}

class ParameterCategoryStore{
pc = createParameterCategory(code, description, nhsId)
validateParameterCategory(pc)
addParameterCategory(pc)
saveParameterCategory(pc)
}

class ParameterCategory{
creat(code, description, nhsId)
}

CreateParameterCategoryUI ..> CreateParameterCategoryController
CreateParameterCategoryController ..> ParameterCategoryStore
CreateParameterCategoryController ..> Company
ParameterCategoryStore ..> ParameterCategory





@enduml